fix emoji size on small screens

--- a/src/components/Body/About/About.module.css
+++ b/src/components/Body/About/About.module.css
@@ -1,33 +1,28 @@
 .aboutContainer {
-    display: flex;
-    flex-direction: column;
-    margin: 0 1.5rem;
+  display: flex;
+  flex-direction: column;
+  margin: 0 0.5rem;
 }
 
 .emojiContainer {
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
 }
 
 .emoji {
-    margin: 4rem auto 0;
-    height: 20.11rem;
-    width: 26.66rem;
+  margin: 4rem auto 0;
+  height: 10rem;
 }
 
-@media only screen and (max-width: 1024px) {
-    .aboutContainer {
-        margin: 0 .5rem;
-    }
+@media only screen and (min-width: 501px) {
+  .emoji {
+    height: 15rem;
+  }
 }
 
-@media only screen and (max-width: 500px) {
-    .emoji {
-        height: 15.0825rem;
-        width: 19.5825rem;
-    }
+@media only screen and (min-width: 1025px) {
+  .aboutContainer {
+    margin: 0 1.5rem;
+  }
 }
-
-
-
